--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+        <provider android:name=".MySuggestionProvider"
+            android:authorities="com.ayqphsorbital.nussem.MySuggestionProvider" />
+
 
         <activity
             android:name=".MainActivity"
@@ -16,18 +19,26 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchResultsActivity" />
+        </activity>
+
+
+        <activity
+            android:name=".SearchResultsActivity"
+            android:label="@string/title_activity_main"
+            android:launchMode="singleTop">
+
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-            <intent-filter >
-                <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
-        </activity>
 
+        </activity>
 
     </application>
 
