--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support:recyclerview-v7:22.1.1'
     compile 'com.android.support:design:22.2.0'
+
+    compile 'com.loopj.android:android-async-http:1.4.4'
+    compile 'com.squareup.picasso:picasso:2.1.1'
 }
